laborations/lab1/test/bad/bad120.cc
int main() {
	inline int x;
}
